hphp/hack/test/typecheck/reactive/test_freeze2.php.exp
File "test_freeze2.php", line 25, characters 3-4:
Variable `$y` is undefined, not always defined, or unset afterwards. (Naming[2050])
  File "test_freeze2.php", line 10, characters 21-22:
  Did you mean `$b` instead?
